# multiagenteBackendEquirent

./: .gitignore  Dockerfile  README.md  decrypt.py  docker-compose.yml  multiagent.db  nginx.conf  pyproject.toml  requirements.txt
app/: config.py  main.py
app/helpers/: chatbot.py  conversations.py  message_media.py  messages.py  templates.py  twilio.py  users.py
app/models/: __init__.py  assignment.py  conversation.py  message.py  message_media.py  template.py  typification.py  user.py  websockets.py
app/routers/admin/: admin.py
app/routers/auth/: auth.py
app/routers/chats/: chats.py
app/routers/conversations/: conversations.py
app/routers/info/: info.py
app/routers/notifications/: notifications.py
app/routers/templates/: templates.py
app/routers/users/: users.py
app/routers/webhook/: webhook.py
app/templates/email/: account_activation.py  password_reset.py
app/utilities/: db.py  default.sql  fake_data.py  mailing.py  pubsub.py  socket.py  templates.json  users.json
